# appMovilHilos

./: ApiParalela.d  Cargo.toml  Jenkisfile  README.md  dockerfile  principalDocker.dockerignore  settings.gradle.kts
